# dopp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml
openspec/changes/docker-exec-xauthority/: design.md  proposal.md  tasks.md
openspec/changes/exec-terminal-launch/: design.md  proposal.md  tasks.md
openspec/changes/exec-terminal-launch/specs/exec-terminal-launch/: spec.md
openspec/changes/refactor-terminal-exec-and-ui/: design.md  proposal.md  tasks.md
openspec/changes/refactor-terminal-exec-and-ui/specs/exec-terminal/: spec.md
openspec/changes/simple-container-gui/: design.md  proposal.md  tasks.md
openspec/changes/simplify-ui-dark-mode/: design.md  proposal.md  tasks.md
openspec/changes/simplify-ui-dark-mode/specs/minimal-container-ui/: spec.md
openspec/changes/simplify-ui-dark-mode/specs/os-dark-mode/: spec.md
openspec/changes/simplify-ui-dark-mode/specs/window-resize-on-container-count/: spec.md
openspec/changes/tauri-container-gui/: design.md  proposal.md  tasks.md
openspec/changes/tauri-container-gui/specs/clipboard-docker-exec/: spec.md
openspec/changes/tauri-container-gui/specs/container-lifecycle-controls/: spec.md
openspec/changes/tauri-container-gui/specs/container-listing/: spec.md
openspec/changes/tauri-container-gui/specs/engine-connection/: spec.md
openspec/changes/ui-dockerapi-nonblocking/: design.md  proposal.md  tasks.md
openspec/changes/ui-dockerapi-nonblocking/specs/async-docker-ops/: spec.md
src/: App.svelte  app.css  docker.rs  main.rs  terminal.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: containers.rs  lib.rs
src/lib/: containers.ts
