[package]
name = "dopp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6", default-features = false }
bollard = { version = "0.21", default-features = false, features = ["pipe"] }
egui = "0.34"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(target_os="linux"))'.dependencies]
arboard = { version = "3.6", default-features = false }
eframe = {
  version = "0.34",
  default-features = false,
  features = ["default_fonts", "accesskit", "wgpu"]
}

[target.'cfg(target_os="linux")'.dependencies]
arboard = {
  version = "3.6",
  default-features = false,
  features = ["wayland-data-control"]
}
eframe = {
  version = "0.34",
  default-features = false,
  features = ["default_fonts", "accesskit", "wayland", "wgpu", "x11"]
}

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
